# cuda-raytracer

./: CMakeLists.txt  README.md
src/: Macros.h  main.cu
src/camera/: Camera.cu  Camera.h  Ray.h
src/cmdline/: MSG.h
src/engine/: Engine.cu  Engine.h
src/image/: Color.cu  Color.h  Image.cu  Image.h
src/light/: DirectionalLight.cu  DirectionalLight.h  Light.cu  Light.h  PointLight.cu  PointLight.h  SpotLight.cu  SpotLight.h
src/math/: Math.cu  Math.h  Matrix33.cu  Matrix33.h  Point3.cu  Point3.h  Vector3.cu  Vector3.h  utils.h
src/math/NotInUse/: Matrix44.cpp  Matrix44.h  Vector4.cpp  Vector4.h
src/object/: Blob.cu  Blob.h  Box.cu  Box.h  Object.cu  Object.h  Plane.cu  Plane.h  SmoothTriangle.cu  SmoothTriangle.h  Sphere.cu  Sphere.h  Triangle.cu  Triangle.h
src/scene/: Scene.cu  Scene.h
src/texture_material/: ChequeredTexture.cu  ChequeredTexture.h  ParametricTexture.cu  ParametricTexture.h  TextureMaterial.h  UVTexture.cu  UVTexture.h  UniformTexture.cu  UniformTexture.h  texture_material.h
